# MIT-ReBioRobot

common/: CMakeLists.txt
common/include/Dynamics/: MiniCheetah.h
common/src/Controllers/: LegController.cpp
config/: mini-cheetah-defaults.yaml
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  stropts.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp
robot/src/rt/: rt_serial.cpp
scripts/: run_mc.sh  send_to_mini_cheetah.sh
user/MIT_Controller/: MIT_Controller.cpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp
user/MIT_Controller/FSM_States/: ControlFSM.cpp  FSM_State.cpp  FSM_State_JointPD.cpp  FSM_State_Locomotion.cpp  FSM_State_StandUp.cpp
